# openapi-test-generator

./: .gitignore  LICENSE  README.md  generated_api_tests.py  generator.py  main.py  parser.py  pyproject.toml  requirements.txt  sample_openapi.json  sample_openapi.yaml  test_api.py
.github/workflows/: ci.yml
backend/: main.py  requirements.txt
examples/: openapi-testgen.yaml  reqres_openapi.json  sample_openapi.json
openapi_test_generator/: cli.py  generator.py  parser.py
tests/: test_generator.py  test_parser.py
website/: README.md  package-lock.json  package.json
website/app/: layout.tsx  page.tsx
website/app/api/generate/: route.ts
